The Idea People - Jobs: Senior Full Stack PHP Web Developer - Apply online. Lecle Vietnam PHP Web Developer | SmartRecruiters. Lecle Vietnam Fullstack Web Developer | SmartRecruiters. PHP Web Developer - Levelset - Career Page. MORI Associates, Inc. Careers - Website Developer Specialist. Job @ Westphalia DataLab (Münster): Web Developer... | JOIN. Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters. Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters. National Software Management Entry level Web Developer | SmartRecruiters. Woongjin, Inc Java Web Developer & Operation | SmartRecruiters. Job @ helloain (Leonding): WEB DEVELOPER | JOIN. Publicis Groupe Web Developer PHP/ Symfony (m/w/d) | SmartRecruiters. Publicis Groupe Web Developer E-Commerce &amp; Marketing (m/w/d) | SmartRecruiters.     Junior React Web Developer (m/w/d) at Flowtify GmbH . Helbiz Inc. - Back-End Web Developer - New York City. Web UI developer - Saggezza - Career Page. EASYRECRUE Web Developer | SmartRecruiters. EASYRECRUE Senior Web Developer | SmartRecruiters. Leikir Web Développeu·r·se Frontend (React / React Native) - CDI | SmartRecruiters. Job @ kapacht (Frankfurt): Web Developer (m/w/d) | JOIN. Job @ talpasolutions (Essen): Web Developer (Front... | JOIN. Job @ Smartfactory (Biel/Bienne):  Web Developer /... | JOIN. Silver Peak Systems Careers - Senior Web Applications Developer - Bangalore. Silver Peak Systems Careers - Senior Web Application Developer. Frontend Web Developer - Roku - CBS Interactive Careers. Ferratum Group - Web Analytics Developer - Google related web development.     Remote Junior Web Developer at Scopic Software . Web Application Developer (Rails) - AIcrowd. Web Developer | Knak Digital. The Havas Group Careers - Full-Stack Web Developer. Senior Web Application Developer - Latitude, Inc. - Career Page. Web Developer - LTD Global - Career Page. The Stars Group Careers - We

--- a/web-developer.html
+++ b/web-developer.html
@@ -160,7 +160,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oMf66fwX'>The Havas Group Careers - Full-Stack Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oMf66fwX'>The Havas Group Careers - Full-Stack Web Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -180,7 +180,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
     Remote Junior Web Developer at Scopic Software
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -220,7 +220,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Full Stack Developer. Job ID 2019-1565. Technology New York, New York. Apply
 . Description. Medscape, a division of WebMD, develops and hosts physician?...</p>
@@ -236,7 +236,7 @@ technologies?...</p>
 <p>6 days ago ... Join a stable, growing business with more than 50 years of sustained success. As 
 a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cypressio/743999692105014-web-developer'>Cypress.io Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cypressio/743999692105014-web-developer'>Cypress.io Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -261,7 +261,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
+<h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -301,7 +301,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/stars-group/job/oG9yafwh'>The Stars Group Careers - Junior Front End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/oG9yafwh'>The Stars Group Careers - Junior Front End Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The role: Junior Front End Web Developer. We are looking for a Junior Front End 
 Web Developer to join our busy and dynamic team based in our Dublin service?...</p>
@@ -334,7 +334,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flowtify.recruiterbox.com/jobs/fk036c2/'>Junior React Web Developer (m/w/d) at Flowtify GmbH</a></h5> 
+<h5><a href='https://flowtify.recruiterbox.com/jobs/fk036c2/'>Junior React Web Developer (m/w/d) at Flowtify GmbH</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>9. Juli 2019 ... Hast du Erfahrung in der Entwicklung von Web-Benutzeroberfl?chen mit React 
 und JavaScript? M?chtest du mithilfe der neusten Technologien und zusammen
@@ -353,7 +353,7 @@ und JavaScript? M?chtest du mithilfe der neusten Technologien und zusammen
 <p>9. Juli 2019 ... Westphalia DataLab GmbH has a job opening for Web Development Praktikum (
 w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/j2cloudservices/job/o2vE8fw3'>j2 Cloud Services Careers - Senior Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/j2cloudservices/job/o2vE8fw3'>j2 Cloud Services Careers - Senior Web Developer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -369,7 +369,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/stars-group/job/oeRzafwy'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/stars-group/job/oeRzafwy'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -381,7 +381,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nstar-financial/job/oHfJ9fwy'>Northstar Financial Services Group, LLC Careers - Software Engineer - UI Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nstar-financial/job/oHfJ9fwy'>Northstar Financial Services Group, LLC Careers - Software Engineer - UI Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -462,7 +462,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/StorwareSpZOo/743999688729295-ui-web-developer'>Storware Sp. z o.o. UI / Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/StorwareSpZOo/743999688729295-ui-web-developer'>Storware Sp. z o.o. UI / Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
