--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://swapfiets.recruitee.com/o/graphic-design-internship'>
+      Graphic Design Internship - Swapfiets
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://consultport.join.com/jobs/255313-product-manager-internship'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -109,7 +115,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mercycorps/job/oW6EafwA'>Mercy Corps Careers - Portland, OR - MicroMentor Brand & Content Strategy Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/mercycorps/job/oW6EafwA'>Mercy Corps Careers - Portland, OR - MicroMentor Brand & Content Strategy Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -133,11 +139,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/261914-product-design-internship-f-m'>Job @ colorfy (Berlin): Product Design Internship ... | JOIN</a></h5> 
+<h5><a href='https://colorfy.join.com/jobs/261914-product-design-internship-f-m'>Job @ colorfy (Berlin): Product Design Internship ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/waveapps/87383c38-68ad-4518-a71f-69a0d18ce820'>Wave Financial - Intern, Finance and Accounting</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/waveapps/87383c38-68ad-4518-a71f-69a0d18ce820'>Wave Financial - Intern, Finance and Accounting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -149,7 +155,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/domo/jobs/1785817'>Job Application for Data Science Consulting  Intern at Domo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/domo/jobs/1785817'>Job Application for Data Science Consulting  Intern at Domo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -175,7 +181,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oUsAafwQ'>Internet Brands Careers - Client Services Representative</a></h5> 
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oUsAafwQ'>Internet Brands Careers - Client Services Representative</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -303,7 +309,7 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
+<h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
 <p><span class="badge badge-light">NYC Paris London Milan Los Angeles Tokyo Madrid</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -362,7 +368,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://luminus.recruitee.com/l/nl/o/internship-credit-risk-models'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luminus.recruitee.com/l/nl/o/internship-credit-risk-models'>
       Internship @ Credit Risk & Models - Luminus
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -382,11 +388,11 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nice-systems-old/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nice-systems-old/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787199'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787199'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -460,10 +466,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <hr/>
 <h5><a href='https://frosch-travel.workable.com/j/A7B6CD755E'>FROSCH TRAVEL - Jobs: Human Resources Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Texas, United States New York</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o3BCafwa'>Carri?res Trek Bicycle - Marketing Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
